--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@ title: Verne in GitHub
 		</div>
 	</div>
 <div class="span4">
-		<div>
+		<!-- <div>
 			<h2>Google+</h2>
 			<div class="g-plusone" data-annotation="inline" data-width="300"></div>				
 			<div class="g-person" data-href="//plus.google.com/u/0/109340910651529827181" data-rel="author"></div>
-		</div>
+		</div> -->
 		<div class="categories">
 			<h2>文章分类</h2>
 			<ul class="tag_box">
